# RUNECLAW-Limit-Entry-Scanner

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXECUTIVE_MEMO.md  LICENSE  METHODOLOGY.md  README.md  SUBMISSION_CHECKLIST.md  manifest.yaml  pyproject.toml
audit/: DEEP_AUDIT.md  MANIFEST.sha256  README.md  RUNECLAW_V3_API_AUDIT_PLAN.md  SECURITY_AUDIT_FINAL.md  SHA256_MANIFEST.txt
backtest/: BACKTEST_REPORT.md
docs/: DEPLOY_RUNBOOK.md  DESIGN_v0.2.0.md  DESIGN_v0.3.0.md  DESIGN_v0.5.0.md  DESIGN_v0.6.0.md  DESIGN_v0.6.3.md  DESIGN_v0.6.4.md  DESIGN_v0.6.5.md  DESIGN_v0.6.6.md  DESIGN_v0.6.7.md  DESIGN_v0.7.0_validation_loop.md  DESIGN_v0.8.0_portfolio_risk.md  DESIGN_v0.9.0_regime_framework_value_test.md  DESIGN_v0.9.1_live_journal.md  DESIGN_v0.9.2_metals_breakout_value_test.md  DESIGN_v0.9.4_audit_hardening.md  LIVE_OPS_REFERENCE.md  RESEARCH_BACKLOG.md
logs/: TRADING_LOGS_TEMPLATE.csv  TRADING_LOG_2026.csv
research/: ab_ci.py  analytics.py  book_snap.py  book_tape.py  deadman.py  decode.py  funding.py  listings_snapshot.json  listings_watch.py  live_journal.py  oi_signal.py  reconcile.py  replay.py  replay_mp.py  sweep.py
scripts/: lint_manifest.py  refresh_hashes.py
src/: execution.py  features.py  main.py  main_live.py  risk.py  scoring.py
tests/: _stub.py  test_analytics.py  test_blind_spot.py  test_breakeven_floor.py  test_discovery.py  test_doc_integrity.py  test_earnings_blackout.py  test_event_blackout.py  test_exit_pack.py  test_golden_pipeline.py  test_indicators.py  test_isolated_margin.py  test_journal_reduce.py  test_live_journal.py  (+18 more)
(+8 files in other folders)
